benerin parser make cve
